--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-markdown": "^1.0.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-plumber": "^0.6.6",
-    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^2.1.0",
     "gulp-to-json": "^1.0.1",
     "gulp-uglify": "^1.0.2",
     "gulp-uglifyjs": "^0.5.0",
